--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,13 @@
 * {
     box-sizing:border-box;
 }
+html {
+    font-size: 1rem;
+    line-height: 1.4;
+    color: #dedede;
+    box-sizing: border-box;
+    background-color: black;
+}
 
 /* Element-Selectors */
 body {
@@ -10,6 +17,14 @@ body {
     width: auto;
     height: auto;
     margin: auto;
+}
+
+path {
+    fill: #dedede;
+}
+
+polygon {
+    fill: #dedede;
 }
 
 .logo {
@@ -21,23 +36,25 @@ body {
     opacity: 0.8;
     position: relative;
 }
+.st0 {
+    fill: none;
+    stroke:#44f4e2;
+    stroke-width: 14;
+    stroke-miterlimit: 10;
+
+}
 
 /* Fangs Effect */
 .fangs {
     opacity: 0;
 }
 
-.fangs:hover {
-    opacity: 1;
-}
-
-
 .button {
     width: 20rem;
     font-family: monospace;
     font-size: 1.25rem;
     font-weight: bold;
-    color: black;
+    color: #dedede;
     opacity: 0.8;
     margin: auto;
     display: block;
